# vulcan

./: BENCHMARKS.md  Cargo.toml  README.md  TODO.md  rustfmt.toml
.cargo/: config.toml
benches/: horizontal_sort.rs
src/: cli.rs  lib.rs  main.rs
src/generation/: mod.rs  v2.rs
src/gui/: mod.rs
vulcan-core/: Cargo.toml
vulcan-core/benches/: horizontal_sort.rs  sorting.rs
vulcan-core/src/: io.rs  lib.rs
vulcan-core/src/feedback/: mod.rs
vulcan-core/src/pixel_sorting/: immediate.rs  mod.rs  prepared.rs  properties.rs  sorting.rs
vulcan-core/src/sorting/: mod.rs  v2.rs
vulcan-gui/src/: cancellation.rs  cli.rs  main.rs  utilities.rs  worker.rs
vulcan-gui/src/gui/: mod.rs
vulcan-gui/src/gui/panels/: center.rs  mod.rs  right.rs
vulcan-gui/src/gui/panels/right/: loading.rs  mod.rs  processing.rs  saving.rs
