[package]
name = "vulcan"
version = "0.1.0"
edition = "2024"


[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
imageproc = "0.25.0"
miette = { version = "7.6.0", features = ["fancy"] }
num = "0.4.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
egui = { version = "0.32.0", features = ["accesskit", "rayon"] }
eframe = "0.32.0"
egui_extras = { version = "0.32.0", features = ["image"] }
image = { version = "0.25.6", default-features = false, features = ["rayon", "png", "jpeg"] }
rfd = "0.15.4"
rayon = "1.10.0"


[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }
rand = "0.9.2"
rand_chacha = "0.9.0"

[[bench]]
name = "horizontal_sort"
harness = false
