[workspace]
members = ["vulcan-core"]

[workspace.dependencies]
clap = { version = "4.5.41", features = ["derive"] }
imageproc = "0.25.0"
miette = { version = "7.6.0", features = ["fancy"] }
num = "0.4.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
egui = { version = "0.32.0", features = ["accesskit", "rayon"] }
eframe = "0.32.0"
egui_extras = { version = "0.32.0", features = ["image"] }
image = { version = "0.25.6", default-features = false, features = ["rayon", "png", "jpeg"] }
rfd = "0.15.4"
rayon = "1.10.0"

# Only used as dev-dependencies in the workspace.
criterion = { version = "0.6.0", features = ["html_reports"] }
rand = "0.9.2"
rand_chacha = "0.9.0"



# --- workspace above, the primary crate (vulcan-gui) below ---


[package]
name = "vulcan-gui"
version = "0.1.0"
edition = "2024"
publish = false


[[bin]]
name = "vulcan-gui"
path = "vulcan-gui/src/main.rs"


[dependencies]
vulcan-core = { path = "./vulcan-core" }

clap = { workspace = true }
imageproc = { workspace = true }
miette = { workspace = true }
num = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
egui = { workspace = true }
eframe = { workspace = true }
egui_extras = { workspace = true }
image = { workspace = true }
rfd = { workspace = true }
rayon = { workspace = true }
