[workspace]
members = ["vulcan-core", "vendored/egui-toast"]

[workspace.dependencies]
# clap = { version = "4.5.41", features = ["derive"] }
miette = { version = "7.6.0", features = ["fancy"] }
thiserror = "2.0.12"
num = "0.4.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
egui = { version = "0.32.0", features = ["accesskit", "rayon"] }
eframe = "0.32.0"
egui_extras = { version = "0.32.0", features = ["image"] }
image = { version = "0.25.6", default-features = false, features = ["rayon", "png", "jpeg"] }
imageproc = { version = "0.25.0", default-features = false, features = ["rayon"] }
rfd = "0.15.4"
rayon = "1.10.0"
egui-phosphor = "0.10.0"
egui_taffy = "0.8.0"

# Using vendored version to manually bump egui version to 0.32.0. Can be reverted when egui-toast updates.
# egui-toast = "0.17.0"
egui-toast = { path = "vendored/egui-toast" }

# egui_tiles = "0.13.0"
crossbeam-channel = "0.5.15"


# Only used as dev-dependencies in the workspace.
criterion = { version = "0.6.0", features = ["html_reports"] }
rand = "0.9.2"
rand_chacha = "0.9.0"
rand_distr = "0.5.1"


[profile.release]
# codegen-units = 1
# lto = "fat"


# --- workspace above, the primary crate (vulcan-gui) below ---


[package]
name = "vulcan-gui"
version = "0.1.0"
edition = "2024"
publish = false


[[bin]]
name = "vulcan-gui"
path = "vulcan-gui/src/main.rs"


[dependencies]
vulcan-core = { path = "./vulcan-core" }

# clap = { workspace = true }
imageproc = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
num = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
egui = { workspace = true }
eframe = { workspace = true }
egui_extras = { workspace = true }
image = { workspace = true }
rfd = { workspace = true }
rayon = { workspace = true }
egui-phosphor = { workspace = true }
egui_taffy = { workspace = true }
egui-toast = { workspace = true }
# egui_tiles = { workspace = true }
crossbeam-channel = { workspace = true }
