[package]
name = "vulcan-core"
version = "0.1.0"
edition = "2024"


[dependencies]
clap = { workspace = true }
miette = { workspace = true }
num = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
image = { workspace = true }
imageproc = { workspace = true }
rfd = { workspace = true }
rayon = { workspace = true }


[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }

[[bench]]
name = "horizontal_sort"
harness = false
