[package]
name = "vulcan-core"
version = "0.1.0"
edition = "2024"


[dependencies]
num = { workspace = true }
image = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
imageproc = { workspace = true }
rayon = { workspace = true }

rand = { workspace = true }
rand_distr = { workspace = true }


[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }


[[bench]]
name = "sorting"
harness = false
